@@ -4,6 +4,7 @@ Stable versions
 3.3.0 ():
 	- change MED BPM mode tempo setting (reported by Lorence Lombardo)
 	- fix OSS driver fragment setting
+	- add interactive loop toggle (requested by Emanuel Haupt)
 	- code cleanup
 
 3.2.0 (20100530):
